vikunja/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja
  namespace: vikunja-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`plan.mtaha.dev`)
      priority: 10
      services:
        - kind: Service
          name: vikunja-web
          namespace: vikunja-k8s
          passHostHeader: true
          port: 3456
          scheme: http
  tls:
    domains:
      - main: plan.mtaha.dev
    secretName: wildcard-mtaha.dev-tls
